samples/_failures_safe/1761479145_24d640_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf689537.c: In function ‘main’:
./samples/SAFE/__tmp_bf689537.c:152:17: error: expected declaration or statement at end of input
  152 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_bf689537.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf689537.c:152:17: error: expected declaration or statement at end of input
